[package]
authors = ["Ilya Bylich <ibylich@gmail.com>"]
edition = "2018"
name = "lib-ruby-parser-cpp-bindings"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

[target.'cfg(not(target_os = "windows"))'.dependencies]
lib-ruby-parser = {version = "=3.0.0-3", features = ["onig"]}

[target.'cfg(not(target_os = "windows"))'.build-dependencies]
bindgen = "0.53.1"
lib-ruby-parser-nodes = "0.8.0"

[target.'cfg(target_os = "windows")'.dependencies]
lib-ruby-parser = {version = "=3.0.0-3", features = []}
